hphp/hack/test/typecheck/parenthesized_call_on_property_2.php
<?hh // strict

class Foo {

  public function bar(): int {
    return ($this->prop)();
  }

  public function prop(): int {
    return 42;
  }
}
